--- a/index.html
+++ b/index.html
@@ -137,7 +137,6 @@
 
             <div class="tab-content">
                 <div class="tab-pane fade in active" id="tab-1">
-                    <!--20150110build-->
                     <div class="row speaker">
                         <div class="span2 image center">
                             <div class="image-box">
@@ -146,18 +145,13 @@
                         </div><!-- /.image -->
 
                         <div class="span7">
-                            <p class="name">BB-2015-01-10/42355ee</p>
+                            <p class="name">OpenWrt for HC5761</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
                             <p class="talk-title">
                                 <a target="_blank"
-                                    onclick='_czc.push(["_trackEvent", "hc5761", "github_down", "BB20150110"]);' 
-                                    href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-10/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin"
-                                    >直接下载</a>
-                                &nbsp;
-                                <a target="_blank"
-                                    onclick='_czc.push(["_trackEvent", "hc5761", "baidu_down", "BB20150110"]);' 
-                                    href="http://pan.baidu.com/s/1bnm2Btd" 
-                                    >百度网盘</a>
+                                    onclick='_czc.push(["_trackEvent", "hc5761", "github_down", "BB"]);' 
+                                    href="https://github.com/rssnsj/openwrt-hc5761/releases"
+                                    >进入下载</a>
                             </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
@@ -174,58 +168,12 @@
                                 内置基于ipset按需代理，支持最小流量模式的Shadowsocks服务（ss-redir.sh）；<br/>
                                 基于GUI的Shadowsocks配置界面。<br/>
                                 </p>
-                                <h4>版本改动</h4>
-                                <p>
-                                    修正前一个版本Samba无法通过界面配置的问题。
-                                </p>
                             </div><!-- /.about -->
                         </div><!-- /.span3 -->
                     </div><!-- /.speaker -->
-                    <!--20150109build-->
-                    <div class="row speaker">
-                        <div class="span2 image center">
-                            <div class="image-box">
-                                <img class="lazy" src="assets/img/hc5761.png" alt="hc5761.png">
-                            </div><!-- /.image-box -->
-                        </div><!-- /.image -->
-
-                        <div class="span7">
-                            <p class="name">BB-2015-01-09-2/7770137</p>
-                            <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title">
-	                            <a target="_blank"
-                                    onclick='_czc.push(["_trackEvent", "hc5761", "github_down", "BB20150109-2"]);'
-	                            	href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin"
-	                            	>直接下载</a>
-	                            &nbsp;
-	                            <a target="_blank" 
-                                    onclick='_czc.push(["_trackEvent", "hc5761", "baidu_down", "BB20150109-2"]);'
-	                            	href="http://pan.baidu.com/s/1mg2zpQK" 
-	                            	>百度网盘</a>
-                            </p>
-                            <p class="time"><span class="time-start">推荐指数:</span>4</p>
-                            <p class="content"></p>
-                        </div><!-- /.span7 -->
-
-                        <div class="span3">
-							<div class="about">
-								<h4>版本说明</h4>
-								<p> 
-                                基于 OpenWrt Barrier Breaker - r43770 编译；<br/>
-                                支持获取正确的MAC地址（HiWiFi bdinfo中的文本格式）；<br/>
-                                修正了板级支持中LAN口、WAN口布局配置；<br/>
-                                极1S、极2通用；<br/>
-                                内置基于ipset按需代理，支持最小流量模式的Shadowsocks服务（ss-redir.sh）；<br/>
-                                基于GUI的Shadowsocks配置界面。<br/>
-                                </p>
-							</div><!-- /.about -->
-                        </div><!-- /.span3 -->
-                    </div><!-- /.speaker -->
-
                 </div><!-- /.tab-1 -->
 
                 <div class="tab-pane fade" id="tab-2">
-                    <!--20150110build-->
                     <div class="row speaker">
                         <div class="span2 image center">
                             <div class="image-box">
@@ -234,18 +182,13 @@
                         </div><!-- /.image -->
 
                         <div class="span7">
-                            <p class="name">BB-2015-01-10/42355ee</p>
+                            <p class="name">OpenWrt for HC5661</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
                             <p class="talk-title">
                                 <a target="_blank"
-                                    onclick='_czc.push(["_trackEvent", "hc5661", "github_down", "BB20150110"]);' 
-                                    href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-10/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin"
-                                    >直接下载</a>
-                                &nbsp;
-                                <a target="_blank"
-                                    onclick='_czc.push(["_trackEvent", "hc5661", "baidu_down", "BB20150110"]);' 
-                                    href="http://pan.baidu.com/s/1bnm2Btd" 
-                                    >百度网盘</a>
+                                    onclick='_czc.push(["_trackEvent", "hc5661", "github_down", "BB"]);' 
+                                    href="https://github.com/rssnsj/openwrt-hc5761/releases"
+                                    >进入下载</a>
                             </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
@@ -262,78 +205,26 @@
                                 内置基于ipset按需代理，支持最小流量模式的Shadowsocks服务（ss-redir.sh）；<br/>
                                 基于GUI的Shadowsocks配置界面。<br/>
                                 </p>
-                                <h4>版本改动</h4>
-                                <p>
-                                    修正前一个版本Samba无法通过界面配置的问题。
-                                </p>
                             </div><!-- /.about -->
                         </div><!-- /.span3 -->
                     </div><!-- /.speaker -->
-                    <!--20150109build-->
-                    <div class="row speaker">
-                        <div class="span2 image center">
-                            <div class="image-box">
-                                <img class="lazy" src="assets/img/hc5661.png" alt="hc5761.png">
-                            </div><!-- /.image-box -->
-                        </div><!-- /.image -->
-
-                        <div class="span7">
-                            <p class="name">BB-2015-01-09-2/7770137</p>
-                            <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title">
-                                <a target="_blank"
-                                    onclick='_czc.push(["_trackEvent", "hc5661", "github_down", "BB20150109-2"]);'
-                                    href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin"
-                                    >直接下载</a>
-                                &nbsp;
-                                <a target="_blank" 
-                                    onclick='_czc.push(["_trackEvent", "hc5661", "baidu_down", "BB20150109-2"]);'
-                                    href="http://pan.baidu.com/s/1mg2zpQK" 
-                                    >百度网盘</a>
-                            </p>
-                            <p class="time"><span class="time-start">推荐指数:</span>4</p>
-                            <p class="content"></p>
-                        </div><!-- /.span7 -->
-
-                        <div class="span3">
-                            <div class="about">
-                                <h4>版本说明</h4>
-                                <p> 
-                                基于 OpenWrt Barrier Breaker - r43770 编译；<br/>
-                                支持获取正确的MAC地址（HiWiFi bdinfo中的文本格式）；<br/>
-                                修正了板级支持中LAN口、WAN口布局配置；<br/>
-                                极1S、极2通用；<br/>
-                                内置基于ipset按需代理，支持最小流量模式的Shadowsocks服务（ss-redir.sh）；<br/>
-                                基于GUI的Shadowsocks配置界面。<br/>
-                                </p>
-                            </div><!-- /.about -->
-                        </div><!-- /.span3 -->
-                    </div><!-- /.speaker -->\
-                   
-
                 </div><!-- /.tab-3 -->
                 <div class="tab-pane fade" id="tab-3">
-                <!--20150110build-->
-                    <div class="row speaker">
+ <div class="row speaker">
                         <div class="span2 image center">
                             <div class="image-box">
-                                <img class="lazy" src="assets/img/hc5663.png" alt="hc5761.png">
+                                <img class="lazy" src="assets/img/hc5661.png" alt="hc5761.png">
                             </div><!-- /.image-box -->
                         </div><!-- /.image -->
 
                         <div class="span7">
-                            <p class="name">BB-2015-01-10/42355ee</p>
+                            <p class="name">OpenWrt for HC5663</p>
                             <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
                             <p class="talk-title">
                                 <a target="_blank"
-                                    onclick='_czc.push(["_trackEvent", "hc5663", "github_down", "BB20150110"]);' 
-                                    href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-10/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin"
-                                    >直接下载</a>
-                                &nbsp;
-                                <a target="_blank"
-                                    onclick='_czc.push(["_trackEvent", "hc5663", "baidu_down", "BB20150110"]);' 
-                                    href="http://pan.baidu.com/s/1bnm2Btd" 
-                                    >百度网盘</a>
+                                    onclick='_czc.push(["_trackEvent", "hc5663", "github_down", "BB"]);' 
+                                    href="https://github.com/rssnsj/openwrt-hc5761/releases"
+                                    >进入下载</a>
                             </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
@@ -350,54 +241,9 @@
                                 内置基于ipset按需代理，支持最小流量模式的Shadowsocks服务（ss-redir.sh）；<br/>
                                 基于GUI的Shadowsocks配置界面。<br/>
                                 </p>
-                                <h4>版本改动</h4>
-                                <p>
-                                    修正前一个版本Samba无法通过界面配置的问题。
-                                </p>
                             </div><!-- /.about -->
                         </div><!-- /.span3 -->
                     </div><!-- /.speaker -->
-                    <!--20150109build-->
-                    <div class="row speaker">
-                        <div class="span2 image center">
-                            <div class="image-box">
-                                <img class="lazy" src="assets/img/hc5663.png" alt="hc5761.png">
-                            </div><!-- /.image-box -->
-                        </div><!-- /.image -->
-
-                        <div class="span7">
-                            <p class="name">BB-2015-01-09-2/7770137</p>
-                            <p class="company">OpenWrt for HC5661/HC5761 (Barrier Breaker - r43770)</p>
-                            <p class="talk-title">
-                                <a target="_blank"
-                                    onclick='_czc.push(["_trackEvent", "hc5663", "github_down", "BB20150109-2"]);'
-                                    href="https://github.com/rssnsj/openwrt-hc5761/releases/download/BB-2015-01-09-2/openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin"
-                                    >直接下载</a>
-                                &nbsp;
-                                <a target="_blank" 
-                                    onclick='_czc.push(["_trackEvent", "hc5663", "baidu_down", "BB20150109-2"]);'
-                                    href="http://pan.baidu.com/s/1mg2zpQK" 
-                                    >百度网盘</a>
-                            </p>
-                            <p class="time"><span class="time-start">推荐指数:</span>4</p>
-                            <p class="content"></p>
-                        </div><!-- /.span7 -->
-
-                        <div class="span3">
-                            <div class="about">
-                                <h4>版本说明</h4>
-                                <p> 
-                                基于 OpenWrt Barrier Breaker - r43770 编译；<br/>
-                                支持获取正确的MAC地址（HiWiFi bdinfo中的文本格式）；<br/>
-                                修正了板级支持中LAN口、WAN口布局配置；<br/>
-                                极1S、极2通用；<br/>
-                                内置基于ipset按需代理，支持最小流量模式的Shadowsocks服务（ss-redir.sh）；<br/>
-                                基于GUI的Shadowsocks配置界面。<br/>
-                                </p>
-                            </div><!-- /.about -->
-                        </div><!-- /.span3 -->
-                    </div><!-- /.speaker -->
-
                 </div><!-- /.tab-4 -->
                 <div class="tab-pane fade" id="tab-4">
                     <div class="row speaker">
@@ -414,7 +260,7 @@
                             <a target="_blank"
                                 onclick='_czc.push(["_trackEvent", "hc6361", "openwrt_down", "14.07"]);' 
                             	href="http://downloads.openwrt.org/barrier_breaker/14.07/ar71xx/generic/"
-                            	>下载地址</a>
+                            	>进入下载</a>
                             </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
