--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="Oenwrt,Hiwifi,Openwrt-hiwifi,极路由，极硬货，极1S，极1，极卫星" />
-	<meta name="description" content="Oenwrt,Hiwifi,Openwrt-hiwifi,极路由，极硬货，极1S，极1，极卫星" />
-	<meta name="Language" content="zh-CN" />
-	<meta name="Copyright" content="openwrt-hiwif.github.io" />
-	<meta name="Designer" content="openwrt-hiwif.github.io" />
-	<meta name="Publisher" content="openwrt-hiwifi" />
-	<meta name="Distribution" content="Global" />
-	<meta name="author"  content="openwrt-hiwifi" />
-	<meta name="robots" content="index,follow" />
-	<meta name="googlebot" content="index,follow,archive" />
+    <meta name="description" content="Oenwrt,Hiwifi,Openwrt-hiwifi,极路由，极硬货，极1S，极1，极卫星" />
+    <meta name="Language" content="zh-CN" />
+    <meta name="Copyright" content="openwrt-hiwif.github.io" />
+    <meta name="Designer" content="openwrt-hiwif.github.io" />
+    <meta name="Publisher" content="openwrt-hiwifi" />
+    <meta name="Distribution" content="Global" />
+    <meta name="author"  content="openwrt-hiwifi" />
+    <meta name="robots" content="index,follow" />
+    <meta name="googlebot" content="index,follow,archive" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/js/rs-plugin/css/settings.css" type="text/css">
     <link rel="stylesheet" href="assets/js/rs-plugin/css/fullwidth.css" type="text/css">
@@ -29,14 +29,14 @@
     <link rel="stylesheet" href="assets/css/infine.css" type="text/css">
 
     <!--[if lt IE 9]>
-       	<link rel="stylesheet" id="ie8-css"  href="assets/css/ie8.css" type="text/css" media="all">
-	<![endif]-->
+        <link rel="stylesheet" id="ie8-css"  href="assets/css/ie8.css" type="text/css" media="all">
+    <![endif]-->
 
-	<title>OpenWrt For HiWiFi</title>
-	<script>
-		var _czc = _czc || [];
-		_czc.push(["_setAccount", "1254056363"]);
-	</script>
+    <title>OpenWrt For HiWiFi</title>
+    <script>
+        var _czc = _czc || [];
+        _czc.push(["_setAccount", "1254056363"]);
+    </script>
 </head>
 
 <body data-spy="scroll" data-target=".main-navigation">
@@ -166,7 +166,8 @@
                                 修正了板级支持中LAN口、WAN口布局配置；<br/>
                                 极1S、极2通用；<br/>
                                 内置基于ipset按需代理，支持最小流量模式的Shadowsocks服务（ss-redir.sh）；<br/>
-                                基于GUI的Shadowsocks配置界面。<br/>
+                                支持基于LuCI的Shadowsocks配置界面，支持自定义gfwlist；<br/>
+                                【新】自带5G Wi-Fi驱动。<br/>
                                 </p>
                             </div><!-- /.about -->
                         </div><!-- /.span3 -->
@@ -203,7 +204,8 @@
                                 修正了板级支持中LAN口、WAN口布局配置；<br/>
                                 极1S、极2通用；<br/>
                                 内置基于ipset按需代理，支持最小流量模式的Shadowsocks服务（ss-redir.sh）；<br/>
-                                基于GUI的Shadowsocks配置界面。<br/>
+                                支持基于LuCI的Shadowsocks配置界面，支持自定义gfwlist；<br/>
+                                【新】自带5G Wi-Fi驱动。<br/>
                                 </p>
                             </div><!-- /.about -->
                         </div><!-- /.span3 -->
@@ -239,7 +241,8 @@
                                 修正了板级支持中LAN口、WAN口布局配置；<br/>
                                 极1S、极2通用；<br/>
                                 内置基于ipset按需代理，支持最小流量模式的Shadowsocks服务（ss-redir.sh）；<br/>
-                                基于GUI的Shadowsocks配置界面。<br/>
+                                支持基于LuCI的Shadowsocks配置界面，支持自定义gfwlist；<br/>
+                                【新】自带5G Wi-Fi驱动。<br/>
                                 </p>
                             </div><!-- /.about -->
                         </div><!-- /.span3 -->
@@ -254,13 +257,13 @@
                         </div><!-- /.image -->
 
                         <div class="span7">
-                            <p class="name">OpenWrt官方版本</p>
-                            <p class="company">请在下载地址中搜索hc6361下载</p>
+                            <p class="name">OpenWrt for HC6361</p>
+                            <p class="company">OpenWrt for HC6361 (Barrier Breaker - r43166)</p>
                             <p class="talk-title">
                             <a target="_blank"
-                                onclick='_czc.push(["_trackEvent", "hc6361", "openwrt_down", "14.07"]);' 
-                            	href="http://downloads.openwrt.org/barrier_breaker/14.07/ar71xx/generic/"
-                            	>进入下载</a>
+                                onclick='_czc.push(["_trackEvent", "hc6361", "github_down", "BB"]);' 
+                                href="https://github.com/rssnsj/openwrt-hc6361/releases"
+                                >进入下载</a>
                             </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
                             <p class="content"></p>
@@ -269,7 +272,10 @@
                         <div class="span3">
                             <div class="about">
                                 <h4>版本说明</h4>
-                                <p>参考https://openwrt.org/<br/>
+                                <p>
+                                基于 OpenWrt Barrier Breaker - r43166 编译；<br/>
+                                基内置基于ipset按需代理，支持最小流量模式的Shadowsocks服务（ss-redir.sh）；<br/>
+                                支持基于LuCI的Shadowsocks配置界面，支持自定义gfwlist。
                                 </p>
                             </div><!-- /.about -->
                         </div><!-- /.span3 -->
@@ -378,30 +384,30 @@ sysupgrade -F -n openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin<br
         </div><!-- /.container -->
     </div><!-- /.footer bottom -->
 </div><!-- /.footer-wrapper -->
-	<script type="text/javascript" src="assets/js/modernizr-2.6.2.min.js"></script>
-	<script type="text/javascript" src="assets/js/retina.js"></script>
-	<script type="text/javascript" src="assets/js/kinetic.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.js"></script>
-	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="assets/js/placeholder.js"></script>
-	<script type="text/javascript" src="assets/js/countdown.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.cycle2.min.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.cycle2.carousel.min.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.cycle2.center.min.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.cycle2.scrollVert.min.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.cycle2.swipe.min.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.cycle2.caption2.min.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.parallax-1.1.3.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.localscroll-1.2.7-min.js"></script>
-	<script type="text/javascript" src="assets/fancybox/jquery.fancybox.pack.js"></script>
-	<script type="text/javascript" src="assets/fancybox/helpers/jquery.fancybox-media.js"></script>
-	<script type="text/javascript" src="assets/js/rs-plugin/js/jquery.themepunch.plugins.min.js"></script>
-	<script type="text/javascript" src="assets/js/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
-	<script type="text/javascript" src="assets/js/jQuery.nicescroll.js"></script>
+    <script type="text/javascript" src="assets/js/modernizr-2.6.2.min.js"></script>
+    <script type="text/javascript" src="assets/js/retina.js"></script>
+    <script type="text/javascript" src="assets/js/kinetic.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/placeholder.js"></script>
+    <script type="text/javascript" src="assets/js/countdown.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.cycle2.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.cycle2.carousel.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.cycle2.center.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.cycle2.scrollVert.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.cycle2.swipe.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.cycle2.caption2.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.parallax-1.1.3.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.localscroll-1.2.7-min.js"></script>
+    <script type="text/javascript" src="assets/fancybox/jquery.fancybox.pack.js"></script>
+    <script type="text/javascript" src="assets/fancybox/helpers/jquery.fancybox-media.js"></script>
+    <script type="text/javascript" src="assets/js/rs-plugin/js/jquery.themepunch.plugins.min.js"></script>
+    <script type="text/javascript" src="assets/js/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+    <script type="text/javascript" src="assets/js/jQuery.nicescroll.js"></script>
     <script type="text/javascript" src="assets/js/jquery.hoverIntent.js"></script>
     <script type="text/javascript" src="assets/js/jquery.lazyload.js"></script>
-	<script type="text/javascript" src="assets/js/infine.js"></script>
+    <script type="text/javascript" src="assets/js/infine.js"></script>
     <script type="text/javascript" src="http://tajs.qq.com/stats?sId=28720163" charset="UTF-8"></script>
-	</body>
+    </body>
 </html>
 
