--- a/index.html
+++ b/index.html
@@ -356,7 +356,13 @@ sysupgrade -F -n openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin<br
                 <div class="row features-description">
                   <div class="span1"></div>
                   <div class="span10 features-description">
-                      QQ群55969444
+                      极路由官方网站：<a herf="http://www.hiwifi.com/">http://www.hiwifi.com/</a><br/>
+                      OpenWrt Patch for HiWiFi HC5761 / HC5661: <a href="https://github.com/rssnsj/openwrt-hc5761/">https://github.com/rssnsj/openwrt-hc5761/</a><br/>
+                      OpenWrt firmware building toolset for HiWiFi HC6361 (tw150v1)<a href="https://github.com/rssnsj/openwrt-hc6361/">https://github.com/rssnsj/openwrt-hc6361/</a><br/>
+                      QQ群:<br/>
+                      发烧路由迷-刷机改装 群号：55969444<br/>
+                      HiWiFi Router Flashing 群号：135074563<br/>
+                      HiWiFi 开发者讨论群 群号：296254584
                       <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
                       <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
                   </div>
