Update home page with latest info.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="keywords" content="Oenwrt,Hiwifi,Openwrt-hiwifi,极路由，极硬货，极1S，极1，极卫星" />
-    <meta name="description" content="Oenwrt,Hiwifi,Openwrt-hiwifi,极路由，极硬货，极1S，极1，极卫星" />
+    <meta name="keywords" content="OpenWrt,HiWiFi,OpenWrt-HiWiFi,极路由，极硬货，极1S，极1，极卫星" />
+    <meta name="description" content="OpenWrt,HiWiFi,OpenWrt-HiWiFi,极路由，极硬货，极1S，极1，极卫星" />
     <meta name="Language" content="zh-CN" />
     <meta name="Copyright" content="openwrt-hiwif.github.io" />
     <meta name="Designer" content="openwrt-hiwif.github.io" />
@@ -82,7 +82,7 @@
 
                         <div class="text-wrapper span3 pull-right">
                             <h3>OpenWrt</h3>
-                            <p class="features-description">openwrt是嵌入式设备上运行的linux系统。OpenWrt的文件系统是可写的，开发者无需在每一次修改后重新编译，令它更像一个小型的 Linux 电脑系统，也加快了开发速度。</p>
+                            <p class="features-description">OpenWrt是嵌入式设备上运行的linux系统。OpenWrt的文件系统是可写的，开发者无需在每一次修改后重新编译，令它更像一个小型的 Linux 电脑系统，也加快了开发速度。</p>
                         </div><!-- /.text-wrapper -->
                     </div><!-- /.row -->
                 </div><!-- /.item -->
@@ -327,7 +327,7 @@
 sudo apt-get install build-essential git flex gettext libncurses5-dev unzip gawk liblzma-dev u-boot-tools
 <br/>
 # 编译<br/>
-git clone https://github.com/rssnsj/openwrt-hc5761.git -b master openwrt-hc5761<br/>
+git clone https://github.com/rssnsj/openwrt-hc5761.git<br/>
 cd openwrt-hc5761<br/>
 make<br/>
 说明<br/>
@@ -358,7 +358,7 @@ sysupgrade -F -n openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin<br
                   <div class="span10 features-description">
                       极路由官方网站：<a herf="http://www.hiwifi.com/">http://www.hiwifi.com/</a><br/>
                       OpenWrt Patch for HiWiFi HC5761 / HC5661: <a href="https://github.com/rssnsj/openwrt-hc5761/">https://github.com/rssnsj/openwrt-hc5761/</a><br/>
-                      OpenWrt firmware building toolset for HiWiFi HC6361 (tw150v1)<a href="https://github.com/rssnsj/openwrt-hc6361/">https://github.com/rssnsj/openwrt-hc6361/</a><br/>
+                      OpenWrt Firmware for HiWiFi HC6361 with Network Utilities<a href="https://github.com/rssnsj/openwrt-hc6361/">https://github.com/rssnsj/openwrt-hc6361/</a><br/>
                       QQ群:<br/>
                       发烧路由迷-刷机改装 群号：55969444<br/>
                       HiWiFi Router Flashing 群号：135074563<br/>
