--- a/index.html
+++ b/index.html
@@ -129,13 +129,52 @@
 
         <div class="speakers">
             <ul class="nav nav-tabs">
-                <li class="active"><a href="#tab-1" data-toggle="tab">极2固件</a></li>
+                <li class="active"><a href="#tab-5" data-toggle="tab">极3固件</a></li>
+                <li><a href="#tab-1" data-toggle="tab">极2固件</a></li>
                 <li><a href="#tab-2" data-toggle="tab">极1S固件</a></li>
                 <li><a href="#tab-3" data-toggle="tab">极硬货固件</a></li>
                 <li><a href="#tab-4" data-toggle="tab">极1固件</a></li>
             </ul>
 
             <div class="tab-content">
+                <div class="tab-pane fade in active" id="tab-4">
+                    <div class="row speaker">
+                        <div class="span2 image center">
+                            <div class="image-box">
+                                <img class="lazy" src="assets/img/hc5761.png" alt="hc5761.png">
+                            </div><!-- /.image-box -->
+                        </div><!-- /.image -->
+
+                        <div class="span7">
+                            <p class="name">OpenWrt for HC5861</p>
+                            <p class="company">OpenWrt for HC5661 / HC5761 / HC5861  (Barrier Breaker - r43770)</p>
+                            <p class="talk-title">
+                                <a target="_blank"
+                                    onclick='_czc.push(["_trackEvent", "hc5861", "github_down", "BB"]);' 
+                                    href="https://github.com/rssnsj/openwrt-hc5x61/releases/releases"
+                                    >进入下载</a>
+                            </p>
+                            <p class="time"><span class="time-start">推荐指数:</span>5</p>
+                            <p class="content"></p>
+                        </div><!-- /.span7 -->
+
+                        <div class="span3">
+                            <div class="about">
+                                <h4>版本说明</h4>
+                                <p> 
+                                基于 OpenWrt Barrier Breaker - r43770 编译；<br/>
+                                支持获取正确的MAC地址（HiWiFi bdinfo中的文本格式）；<br/>
+                                修正了板级支持中LAN口、WAN口布局配置；<br/>
+                                极1S、极2通用；<br/>
+                                内置基于ipset按需代理，支持最小流量模式的Shadowsocks服务（ss-redir.sh）；<br/>
+                                支持基于LuCI的Shadowsocks配置界面，支持自定义gfwlist；<br/>
+                                【新】自带5G Wi-Fi驱动。<br/>
+                                </p>
+                            </div><!-- /.about -->
+                        </div><!-- /.span3 -->
+                    </div><!-- /.speaker -->
+                </div><!-- /.tab-4 -->
+                
                 <div class="tab-pane fade in active" id="tab-1">
                     <div class="row speaker">
                         <div class="span2 image center">
@@ -150,7 +189,7 @@
                             <p class="talk-title">
                                 <a target="_blank"
                                     onclick='_czc.push(["_trackEvent", "hc5761", "github_down", "BB"]);' 
-                                    href="https://github.com/rssnsj/openwrt-hc5761/releases"
+                                    href="https://github.com/rssnsj/openwrt-hc5x61/releases"
                                     >进入下载</a>
                             </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
@@ -188,7 +227,7 @@
                             <p class="talk-title">
                                 <a target="_blank"
                                     onclick='_czc.push(["_trackEvent", "hc5661", "github_down", "BB"]);' 
-                                    href="https://github.com/rssnsj/openwrt-hc5761/releases"
+                                    href="https://github.com/rssnsj/openwrt-hc5x61/releases"
                                     >进入下载</a>
                             </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
@@ -225,7 +264,7 @@
                             <p class="talk-title">
                                 <a target="_blank"
                                     onclick='_czc.push(["_trackEvent", "hc5663", "github_down", "BB"]);' 
-                                    href="https://github.com/rssnsj/openwrt-hc5761/releases"
+                                    href="https://github.com/rssnsj/openwrt-hc5x61/releases"
                                     >进入下载</a>
                             </p>
                             <p class="time"><span class="time-start">推荐指数:</span>5</p>
@@ -296,16 +335,17 @@
                 <div class="row features-description">
                   <div class="span1"></div>
                   <div class="span10">
-1、首先确认你的u-boot是已经解锁的，方法你懂的 :) .<br/>
-2、为你电脑的“本地连接”加一个IP: 192.168.1.88 / 255.255.255.0<br/>
-3、解压刷机工具包（例如 tftpd64.400.rar）, 根据操作系统位数, 32位运行tftpd32, 64位运行tftpd64.<br/>
-4、用上面生成的相应机型的 XXXX-recovery.bin 替换刷机包目录下的 recovery.bin .<br/>
-5、拔掉HiWiFi电源线.<br/>
-6、网线一头连HiWiFi的LAN口, 一头连电脑.<br/>
-7、用尖锐物按住HiWiFi背后的reset孔不松动, 同时给路由器接电.<br/>
-8、直到看到tftpd出现进度条, 松开.<br/>
-9、前面板的指示灯会轮流闪烁, 表明内部Flash正在擦写, 此时不要断电<br/>
-10、ping 192.168.1.1, 直到ping通, 刷机过程总共3-5分钟.</div>
+                    以极2为例，openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin 是sysupgrade格式的固件，<br/>
+                    传到路由器的/tmp下，通过SSH或串口登录路由器Shell。<br/>
+                    首先最好将U-boot替换成解锁版（不校验固件是否是官方发布的）的，以防止万一刷砖无法直接tftp刷root固件：<br/>
+                    cd /tmp<br/>
+                    wget http://rssn.cn/.uboot/HC5761-uboot.bin   # 浏览: <a href="http://rssn.cn/.uboot/"></a>http://rssn.cn/.uboot/</a> 查查找其他型号的<br/>
+                    mtd write HC5761-uboot.bin u-boot<br/>
+                    如果上面的地址失效，也可以从<a href="https://github.com/rssnsj/firmware-tools/tree/hiwifi" target="_blank">这里获取</a><br/>
+                    <br/>
+                    然后刷入固件：<br/>
+                    sysupgrade -F -n openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin<br/>
+                  </div>
                   <div class="span1"></div>
                 </div>
             </div>
@@ -322,23 +362,8 @@
                 <div class="row features-description">
                   <div class="span1"></div>
                   <div class="span10">固件编译方法
-
-# 安装必需的软件包（仅限Ubuntu/Debian）<br/>
-sudo apt-get install build-essential git flex gettext libncurses5-dev unzip gawk liblzma-dev u-boot-tools
-<br/>
-# 编译<br/>
-git clone https://github.com/rssnsj/openwrt-hc5761.git<br/>
-cd openwrt-hc5761<br/>
-make<br/>
-说明<br/>
-
-以上svn目录包含了HC5761的OpenWrt补丁，checkout下来代码直接make，会自动打补丁、自动配置menuconfig，并自动编译；<br/>
-编译时若碰到代码包下载失败，或下载过于缓慢，请先 Ctrl + C 暂停，手动下载同名的文件放到 openwrt-ramips/dl <br/>下面，再执行“make”继续编译；<br/>
-openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin 是sysupgrade格式的固件，传到路由器的/<br/>tmp下，通过串口登录极2/极1S，执行以下命令刷入：<br/>
-<br/>
-sysupgrade -F -n openwrt-ramips-mt7620a-hiwifi-hc5761-squashfs-sysupgrade.bin<br/>
-<br/>
-本编译方法同时会在recovery.bin目录下生成 openwrt-HC5761-recovery.bin、openwrt-HC5661-recovery.bin <br/>两个文件，分别是极2、极1S的带u-boot固件，u-boot解锁后可用TFTP刷机。</div>
+                    <a href="https://github.com/rssnsj/openwrt-hc6361">https://github.com/rssnsj/openwrt-hc6361</a>
+                    <a href="https://github.com/rssnsj/openwrt-hc5x61">https://github.com/rssnsj/openwrt-hc5x61</a>
                   <div class="span1"></div>
                 </div>
             </div>
