--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="row speaker">
                         <div class="span2 image center">
                             <div class="image-box">
-                                <img class="lazy" src="assets/img/hc5761.png" alt="hc5761.png">
+                                <img class="lazy" src="assets/img/hc5861.png" alt="hc5861.png">
                             </div><!-- /.image-box -->
                         </div><!-- /.image -->
 
@@ -175,7 +175,7 @@
                     </div><!-- /.speaker -->
                 </div><!-- /.tab-4 -->
                 
-                <div class="tab-pane fade in active" id="tab-1">
+                <div class="tab-pane fade in" id="tab-1">
                     <div class="row speaker">
                         <div class="span2 image center">
                             <div class="image-box">
