--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="keywords" content="OpenWrt,HiWiFi,OpenWrt-HiWiFi,极路由，极硬货，极1S，极1，极卫星" />
-    <meta name="description" content="OpenWrt,HiWiFi,OpenWrt-HiWiFi,极路由，极硬货，极1S，极1，极卫星" />
+    <meta name="keywords" content="OpenWrt,HiWiFi,OpenWrt-HiWiFi,极路由，极硬货，极3,极2,极1S，极1，极卫星" />
+    <meta name="description" content="OpenWrt,HiWiFi,OpenWrt-HiWiFi,极路由，极硬货，极3,极2,极1S，极1，极卫星" />
     <meta name="Language" content="zh-CN" />
     <meta name="Copyright" content="openwrt-hiwif.github.io" />
     <meta name="Designer" content="openwrt-hiwif.github.io" />
@@ -137,7 +137,7 @@
             </ul>
 
             <div class="tab-content">
-                <div class="tab-pane fade in active" id="tab-4">
+                <div class="tab-pane fade in active" id="tab-5">
                     <div class="row speaker">
                         <div class="span2 image center">
                             <div class="image-box">
